1.21.5 support. Remember to close the auth executor on shutdown.